# HeroWorld

./: .gitignore  .~lock.README.md#  Apotheosis Mod Concept.txt  Crossfire.jar.js  HTML TEST CODE -NEEDS CORRECT PATH.txt  README.md  cfperl.xs  jxclient.jar.js  metaserver2  onefang.pl  perlin.ipynb  retile.py  settings  vim.exe.stackdump  worldcp.py
server/: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  check-fragment.am  config.status  configure  configure.ac  libtool  logfile
server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
server/common/: Makefile  Makefile.am  Makefile.in  README  anim.c  arch.c  artifact.c  button.c  dialog.c  exp.c  friend.c  glue.c  holy.c  image.c  info.c  init.c  item.c  languages.c  links.c  living.c  loader.c  loader.l  logger.c  los.c  map.c  ob_methods.c  ob_types.c  object.c  path.c  player.c  porting.c  re-cmp.c  readable.c  recipe.c  region.c  shstr.c  stringbuffer.c  time.c  treasure.c  utils.c
server/debian/: changelog  control  copyright  crossfire-doc.docs  crossfire-edit.files  crossfire-server.conffiles  crossfire-server.docs  crossfire-server.logrotate  crossfire-server.postinst  crossfire-server.postrm  crossfire-server.preinst  dirs  override.Lintian  rules  templates  watch
server/debian/patches/: 00list  10_initsettings.dpatch  20_helppickup.dpatch
server/debian/po/: templates.pot
server/doc/: Makefile  Makefile.am  Makefile.in  README  arch-handbook.txt  commands.txt  crossfire-config.man  crossfire-server.man  crossloop.man  crossloop.web.man  handbook.ps  include_html.pl  media-tags.txt  plugins.txt  runes-guide.txt  settings.txt  skills.txt  spoiler.ps  stats.txt  style-guide.txt  survival-guide.txt
server/doc/Developers/: Makefile  Makefile.am  Makefile.in  README  archetype.dox  artifact.dox  client.dox  collect.dox  compound_animations.dox  connected.dox  custom_attributes.dox  dialog.dox  extmessage-types.html  general.dox  i18n.dox  images  item_transformation  key-value  login.dox  mainpage.dox  map-technical  map.dox  mapguide  misc.dox  object.dox  objects  player.dox  plugins  plugins.ps  programming_guide  protocol.txt  python  python.ps  random-maps  random-styles  region.dox  regions  runes  shops  skills  (+8 more)
server/doc/playbook/: Makefile  Makefile.am  Makefile.in  appA.tex  appB.tex  appC.tex  bonus-extract  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  char-extract  gods-extract  handbook.tex  items-extract  levels-extract  local.sty  make_index.pl  skills-extract  skills2-extract  sorter  spellpath-extract  statskmod-extract  title.tex  treas1-extract  treas2-extract
server/doc/playbook-html/: Makefile  Makefile.am  Makefile.in  appA.html  appB.html  appC.shtml  bonus-extract  chap1.html  chap2.shtml  chap3.shtml  chap4.shtml  chap5.shtml  chap6.shtml  chap7.html  char-extract  generic-extract  gods-extract  handbook.shtml  items-extract  levels-extract  skills-extract  skills2-extract  spellpath-extract  statskmod-extract  treas2-extract
server/doc/scripts/: Makefile  Makefile.am  Makefile.in  items-extract.pl  makeps.pl  monster-extract.pl
server/doc/spell-docs/: Makefile  Makefile.am  Makefile.in  README  prayer-list.ps  prayer-list.txt  spell-info.ps  spell-info.txt  (+4 more)
server/include/: Makefile  Makefile.am  Makefile.in  account_char.h  artifact.h  attack.h  autoconf.h  autoconf.h.in  book.h  commands.h  config.h  define.h  dialog.h  face.h  global.h  god.h  image.h  includes.h  libproto.h  living.h  loader.h  logger.h  map.h  material.h  metaserver2.h  newserver.h  ob_methods.h  ob_types.h  object.h  party.h  path.h  player.h  plugin.h  plugproto.h  race.h  re-cmp.h  recipe.h  shstr.h  skills.h  sockproto.h  (+14 more)
server/lib/: Makefile  Makefile.am  Makefile.in  README  animations  archetypes  artifacts  attackmess  ban_file  bmaps.paths  checkarch.pl  checkarch.pl.in  collect.pl  collect.pl.in  crossfire.0  crossfire.1  def_help  dm_file  exp_table  faces  forbid  formulae  image_info  messages  metaserver2  motd  news  races  rules  settings  smooth  stat_bonus  treasures.bld  util.pl
server/macros/: cf_python.m4  cf_visibility.m4  cf_xslt.m4  libcurl.m4
server/make_win32/: INSTALL_WIN32.txt  Release_notes.txt  cfserver.nsi  crossfire.rc  crossfire32.dsp  crossfire32.dsw  installwin32.bat  maps.nsi  resource.h  run_win32.bat
server/plugins/: Makefile  Makefile.am  Makefile.in
server/random_maps/: Makefile  Makefile.am  Makefile.in  README  decor.c  door.c  exit.c  expand2x.c  expand2x.h  floor.c  main.c  maze_gen.c  maze_gen.h  monster.c  random_map  random_map.c  random_map.h  reader.c  reader.l  rogue_layout.c  room_gen.h  room_gen_onion.c  room_gen_spiral.c  rproto.h  snake.c  special.c  square_spiral.c  style.c  treasure.c  wall.c
server/rpm/: crossfire.init  crossfire.logrotate  crossfire.spec
server/server/: Makefile  Makefile.am  Makefile.in  account.c  account_char.c  alchemy.c  apply.c  attack.c  ban.c  bowery.c  build_map.c  c_chat.c  c_misc.c  c_move.c  c_new.c  c_object.c  c_party.c  c_range.c  c_wiz.c  commands.c  crossfire-server  daemon.c  disease.c  gods.c  hiscore.c  init.c  jewler.c  knowledge.c  login.c  main.c  monster.c  move.c  ob_methods.c  ob_types.c  party.c  pets.c  player.c  plugins.c  quest.c  resurrection.c  (+14 more)
server/socket/: Makefile  Makefile.am  Makefile.in  README  image.c  info.c  init.c  item.c  loop.c  lowlevel.c  metaserver.c  request.c  requestinfo.c  sounds.c
server/test/: Makefile  Makefile.am  Makefile.in
server/types/: ChangeLog  Makefile  Makefile.am  Makefile.in  README
server/utils/: Makefile  Makefile.am  Makefile.in  add_throw.perl  add_throw.perl.in  arch2xml.py  bwp.c  cfarches.xsl  cfmeta-rrd  checkInternalPrototype.sh  crossfire-loop.c  crossloop  crossloop.in  crossloop.web  crossloop.web.in  generateEmptyCheck.sh  get_release.in  gridarta-types-convert.c  loreCollect.py  mapper.c  maps.c  metaserver.pl  mktable.script  player_dl.html  player_dl.pl  player_dl.pl.in  scores.pl  scores.pl.in
(+24695 files in other folders)
